--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "axios": "^1.5.1",
     "json-server": "^0.17.2",
     "next": "13.1.6",
     "react": "18.2.0",
